# Project-4-

./: .coverage  .env-example  .gitignore  EX04_Reverse_Engineering_Agentic_AI.txt  README.md  TODO.md  main.py  project_requirements.md  pyproject.toml  run_live_agent.py
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_gatekeeper.md  PRD_langgraph_orchestration.md  PRD_node_extractor.md  PRD_orphan_detector.md  PRD_token_tracker.md  TODO.md  block_schema.md  oop_schema.md  prompts_log.md
docs/after_state/: GRAPH_REPORT.md  graph.html  graph.json
docs/before_state/: graph.html
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
obsidian/: GRAPH_REPORT.md  graph.json  hot_mathsquiz.md  hot_polygons.md  index.md  knowledge_delta.md  research_questions.md
obsidian/.obsidian/: graph.json  workspace.json
reports/: bug_analysis.md  efficiency_live_results.md  efficiency_report.md  mathsquiz_step_analysis.md  research_questions.md
results/: baseline_token_log.jsonl  live_agent_fix.diff  live_agent_token_log.jsonl  live_fix_mathsquiz.py  live_fix_polygons.py  orphan_report.md  token_log.jsonl  token_log_live.jsonl
src/broken-python/mathsquiz/: mathsquiz.py
src/broken-python/polygons/: polygons.py
src/hw4/: __init__.py  baseline_agent.py  constants.py  efficiency.py  graph.py  live_efficiency.py  llm_config.py  logging_setup.py  state.py
src/hw4/agents/: __init__.py  alpha.py  alpha_prompt.py  beta.py  beta_prompt.py
src/hw4/extensions/: __init__.py  orphan_detector.py
src/hw4/gateway/: __init__.py  config.py  gatekeeper.py  llm_proxy.py  overflow_queue.py  rate_limiter.py
src/hw4/nodes/: __init__.py  gatekeeper.py  router.py
src/hw4/sdk/: __init__.py  core.py  repair.py
src/hw4/shared/: __init__.py  version.py
tests/: test_baseline_agent.py  test_efficiency.py  test_gateway_config.py  test_gateway_gatekeeper.py  test_gateway_proxy.py  test_gateway_queue.py  test_gateway_rate_limiter.py  test_graph.py  test_llm_config.py  test_logging_setup.py  test_mathsquiz.py  test_orphan_detector.py  test_polygons.py  test_sdk.py  test_tool_call_repair.py  test_tools.py
(+7 files in other folders)
