[project]
name = "hw-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-groq",
    "langchain-google-genai",
    "python-dotenv",
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.ruff]
extend-exclude = ["src/broken-python"]

[dependency-groups]
dev = [
    "graphifyy>=0.8.40",
]
